--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
 	   </div>
 	   <h4 class="end">© 2018 Central Coffee</h4>
    </div>
+	<div class="ten">
+		<form>
+			<h2>Contract us</h2>
+			<input type="text" placeholder="Name"><br>
+			<input type="email" placeholder="Email"><br>
+			<textarea placeholder="Message"></textarea>
+			<input class="alo" type="radio" name="gioitinh">Nam<br>
+			<input class="alo" type="radio" name="gioitinh">Nữ<br>
+		</form>
+	</div>
 	
 </div>
 </body>
